# memetok

./: .gitignore  README.md  data-flow.md  env.example  index.html  package-lock.json  package.json  specs  tailwind.config.ts  todo  vite.config.ts
analytics/: .gitignore  CMakeLists.txt  Dockerfile  docker-compose.yml  todo
analytics-microservice/: .dockerignore  Dockerfile  README.md  SPEC.md  curl.md  docker-compose.yml  go.mod  nginx.conf
analytics/include/: analytics_manager.h  post_analytics_parser.h  post_analytics_state.h  posts_analytics.h
analytics/rnd/: pesudo_code.md  system-req-specs.md
analytics/src/: main.cpp
analytics/test/: pymq.py
analyticsPP/: .dockerignore  Makefile  todo
analyticsPP/include/: action.h  zmq_server.h
backend/: env.example  handler.py  main.py  requirements.txt  test_uploader.py
backend/__tests__/: test_posts_handlers_auth.py  test_posts_service.py
backend/api/: index.py
backend/common/: app_constants.py
backend/config/: config.py
backend/database/: mongo_factory.py
docs/: nsfw-sales-playbook.md
src/: App.tsx  index.css  main.tsx
src/components/: AdCard.tsx  CommentDrawer.tsx  CreatePostButton.tsx  CreatePostModal.tsx  Loader.tsx  MenuDrawer.tsx  ProtectedRoute.tsx  ShareModal.tsx  SuperAdminAuthModal.tsx  UserProfile.tsx  VideoCard.tsx  VideoFeed.tsx  VideoOverlay.tsx  VideoPlaceholder.tsx  VideoSeekBar.tsx  VideoSidebar.tsx
src/config/: adConfig.ts  appConfig.ts
src/hooks/: useVideoPreload.ts
src/lib/: actions.ts  api-client.ts  api.ts  cache.ts  env.ts  mediaProcessor.ts
src/pages/: Index.tsx  (+5 more)
(+62 files in other folders)
